# pact

./: .dir-locals.el~  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hsinspect.env  .readthedocs.yaml  .travis.yml  .weeder.yaml  AlteumAlfonsoReyes  CHANGELOG.md  CODEOWNERS  HLint.hs  LICENSE  README.md  appveyor.yml  build-ghcjs.sh  cabal-ghcjs.project  cabal.project  collectArtifacts.sh  config.yaml  default-new.nix  default.nix  deleteme.sqllite-journal  demo-full.sh  demo-smt-only.sh  flake.nix  foo  foo.hs  foo.pact  foo.repl  gas-model-raw-data.csv  gas-prices.csv  hie.yaml  hread  hreaded  notes.txt  output-first-pass.xlsx  output.csv  overrides.nix  (+18 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md
.github/workflows/: applications.yml  nix.yaml  nix.yml  stack-ci.yaml  stack-full.yaml
app/: Main.hs
bench/: JsonDecode.hs  PactJson.hs
cbits/musl/: __math_divzero.c  __math_invalid.c  __math_uflow.c  __math_xflow.c  endian.h  exp.c  exp_data.c  exp_data.h  libm.h  log.c  log_data.c  log_data.h  pow.c  pow_data.c  sqrt.c  sqrt_data.c  sqrt_data.h
cbits/pow/: pow.c  pow_data.h
cli/: cli.repl
contract-benchmarks/: ContractsBench.hs
contract-benchmarks/contracts/: coin-v5-create.pact
dep/kpkgs/: github.json
dlog/: Main.hs
docs/: .pact-history  README.md  build.sh  conf.py  index.rst  pact-functions.md  pact-functions.rst  pact-jp.md  pact-properties-api.md  pact-properties-api.rst  pact-properties.md  pact-properties.rst  pact-reference.md  pact-reference.rst  pacts.md  swagger.json  template.html  work.sh
docs/en/: capabilities.md  conf.py  index.rst  pact-bnf.md  pact-bnf.rst  pact-functions.md  pact-functions.rst  pact-functions_BACKUP_62349.md  pact-functions_BASE_62349.md  pact-grammar.md  pact-properties-api.md  pact-properties-api.rst  pact-properties.md  pact-properties.rst  pact-reference.md  pact-reference.rst
docs/ja/: conf.py  index.rst  pact-reference.md  pact-reference.rst
docs/jp/: conf.py  index.rst  pact-jp.md  pact-jp.rst  pact-reference.md  pact-reference.rst
docs/ko/: conf.py  pact-reference.md  pact-reference.rst
docs/kr/: index.rst  pact-reference.md  pact-reference.rst
examples/: payments.repl
examples/accounts/: accounts.pact  accounts.repl  keysets.pact
examples/analyze-tests/: analyze-tests.pact  analyze-tests.repl
examples/auction/: auction.pact  auction.repl
examples/cp/: auth.pact  cash.pact  cp.pact  cp.repl  orders.pact
examples/fungible-asset/: fungible-asset.pact
examples/session/: posts.pact  posts.repl
examples/verified-accounts/: #accounts.repl#  accounts.pact  accounts.repl  properties.pact
executables/: Bench.hs  Disabled.hs  GasModel.hs  GasModel2.hs  PowTest.hs  Repl.hs  ReplGhcjs.hs
golden/: golden.accounts.repl  golden.autocap.repl  golden.fqns.repl  golden.lams.repl  golden.memcheck.repl  golden.nks.repl  golden.rootnamespace.repl
golden/accounts-module/: golden
golden/accounts-module-crossChainSendCR/: golden
golden/accounts-module-crossChainSendCRBackCompat/: golden
golden/accounts-module-eventCR/: golden
golden/accounts-module-failureCR/: golden
golden/accounts-module-lambdas/: golden
golden/accounts-module-successCR/: golden
golden/autocap-module/: golden
golden/gas-model/: golden
golden/goldenFullyQuals/: golden
golden/goldenModuleMemCheck/: golden
golden/goldenNamespacedKeysets/: golden
pact/: default.nix  pact.cabal
pact-api.js/: LICENSE  index.html  load.js  package.json  pact-api-global.js  pact-api-global.min.js  pact-api.js  pact-api.min.js
pact-backend/: default.nix  pact-backend.cabal
pact-core/: README.md
pact-frontend/: pact-frontend.cabal
pact-ghcjs/: pact-ghcjs.cabal
pact-ghcjs/site/css/: index.css
pact-ghcjs/site/js/: pact.js
pact-ghcjs/src/: Examples.hs  ReplGhcjs.hs
pact-lang-api.js/: index.html  load.js  package.json  pact-lang-api-global.js  pact-lang-api-global.min.js  pact-lang-api.js  pact-lang-api.min.js  readme.md
pact-server/: pact-server.cabal
pact-server/docs/: build.sh  conf.py
pact-server/examples/accounts/: accounts.pact
pact-server/src/Pact/: Repl.hs
pact-server/src/Pact/PersistPactDb/: Regression.hs
pact-server/src/Pact/Types/: RPC.hs
pact-server/tests/: PactTestsSpec.hs  TypecheckSpec.hs
pact-server/tests/pact/: keysets.repl  tc.repl
pact/examples/accounts/: accounts.repl
pact/examples/accounts/scripts/: 02-accounts.yaml  03-create.yaml  04-alice.yaml  05-bob.yaml
pact/examples/cp/: auth.pact  cp.pact  orders.pact
pact/src/Pact/: Compile.hs  Eval.hs  Persist.hs  PersistPactDb.hs  Repl.hs  ReplCommon.hs  Typechecker.hs
pact/src/Pact/Native/: Internal.hs  Ops.hs
pact/src/Pact/Persist/: Pure.hs
pact/src/Pact/Repl/: Lib.hs  Types.hs
pact/src/Pact/Types/: Lang.hs  Logger.hs  Orphans.hs  Runtime.hs  Typecheck.hs  Util.hs
pact/tests/: Blake2Spec.hs  PactTestsSpec.hs  ParserSpec.hs  TypesSpec.hs  cp-auth-keys.json
pact/tests/bench/: bench.pact  bench.repl
pact/tests/blake2/: blake2b.h
pact/tests/pact/: comments.repl  json.repl  time.repl  yield.repl
powcheck/: Main.hs
release/: mk-pact-dist.sh
smt-theories/: extras.smt2
src/: .#SymExec.hs  Lib.hs  PactTestsSpec.hs  SolverAttempt.hs  SymExec.hs
templates/: cont-request-template.yaml  exec-request-template.yaml  foo.pact  foo.yaml
test/: Spec.hs
tests/: AnalyzeProperties.hs  AnalyzePropertiesSpec.hs  AnalyzeSpec.hs  Blake2Spec.hs  Blake2bSpec.hs  ClientSpec.hs  CoverageSpec.hs  DocgenSpec.hs  GasModelSpec.hs  GoldenSpec.hs  HashSpec.hs  HistoryServiceSpec.hs  HlintSpec.hs  HyperlaneSpec.hs  Keccak256Spec.hs  KeysetSpec.hs  ModularArithmeticSpec.hs  NamespaceSpec.hs  PactCLISpec.hs  PactContinuationSpec.hs  PactTests.hs  PactTestsSpec.hs  PairingSpec.hs  ParserSpec.hs  PersistSpec.hs  PoseidonSpec.hs  PrincipalSpec.hs  RemoteVerifySpec.hs  ReplSpec.hs  RoundTripSpec.hs  SchemeSpec.hs  SignatureSpec.hs  SizeOfSpec.hs  TestRunner.hs  TestUtils.hs  TimeGen.hs  TransSpec.hs  TypecheckSpec.hs  TypesSpec.hs  Utils.hs  (+11 more)
web/: build.sh  index.html  index.js
(+657 files in other folders)
