name:                pact-analyze
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pact-analyze#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pact.Analyze.Types
                     , Pact.Analyze.Demo
                     , Pact.Analyze.DSL
  build-depends:       Decimal
                     , Hsmtlib
                     , SmtLib
                     , aeson
                     , ansi-wl-pprint >= 0.6.7.3 && < 0.7
                     , base >= 4.7 && < 5
                     , bytestring
                     , unordered-containers
                     , containers
                     , lens
                     , data-default
                     , mtl >= 2.2.1
                     , pact
                     , parsec
                     , groom
                     , transformers
                     , yaml
                     , text
                     , thyme

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable pact-analyze-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pact-analyze
  default-language:    Haskell2010

test-suite pact-analyze-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pact-analyze
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
