cabal-version:       2.2
name:                pact
version:             3.5.0
synopsis:            Smart contract language library and REPL
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact>.
homepage:            https://github.com/kadena-io/pact
bug-reports:         https://github.com/kadena-io/pact/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Stuart Popejoy
maintainer:          stuart@kadena.io
copyright:           Copyright (C) 2016 Stuart Popejoy
category:            Language
build-type:          Simple

flag cryptonite-ed25519
  description: use cryptonite instead of ed25519-donna
  default:     False
  manual:      True

flag ghc-flags
  description: Generate .ghc.flags files during compilation
  default:     False
  manual:      True

library
  exposed-modules:     Crypto.Hash.Blake2Native
                     , Pact.Analyze.Remote.Types
                     , Pact.Compile
                     , Pact.Eval
                     , Pact.Gas
                     , Pact.Gas.Table
                     , Pact.Native
                     , Pact.Native.Capabilities
                     , Pact.Native.Db
                     , Pact.Native.Internal
                     , Pact.Native.SPV
                     , Pact.Native.Time
                     , Pact.Native.Ops
                     , Pact.Native.Keysets
                     , Pact.Native.Decrypt
                     , Pact.Parse
                     , Pact.PersistPactDb
                     , Pact.Persist
                     , Pact.Persist.Pure
                     , Pact.Repl
                     , Pact.Repl.Lib
                     , Pact.Repl.Types
                     , Pact.Runtime.Capabilities
                     , Pact.Runtime.Typecheck
                     , Pact.Server.API
                     , Pact.Types.API
                     , Pact.Types.Capability
                     , Pact.Types.ChainId
                     , Pact.Types.ChainMeta
                     , Pact.Types.Codec
                     , Pact.Types.Command
                     , Pact.Types.Continuation
                     , Pact.Types.Scheme
                     , Pact.Types.Exp
                     , Pact.Types.ExpParser
                     , Pact.Types.Gas
                     , Pact.Types.Hash
                     , Pact.Types.Info
                     , Pact.Types.Lang
                     , Pact.Types.Logger
                     , Pact.Types.Names
                     , Pact.Types.Native
                     , Pact.Types.PactError
                     , Pact.Types.PactValue
                     , Pact.Types.Parser
                     , Pact.Types.Persistence
                     , Pact.Types.Pretty
                     , Pact.Types.RPC
                     , Pact.Types.Runtime
                     , Pact.Types.Orphans
                     , Pact.Types.SizeOf
                     , Pact.Types.SPV
                     , Pact.Types.Swagger
                     , Pact.Types.Term
                     , Pact.Types.Type
                     , Pact.Types.Util
                     , Pact.Types.Version
                     , Pact.Types.Typecheck
                     , Pact.Typechecker

  if flag(ghc-flags)
    ghc-options: -fplugin GhcFlags.Plugin
    build-depends: ghcflags

  if impl(ghcjs)
    build-depends: ghcjs-dom
    exposed-modules:
      Pact.Analyze.Remote.Client

  if !impl(ghcjs)
    hs-source-dirs: src-ghc
    exposed-modules:
                    Pact.Analyze
                    Pact.Analyze.Alloc
                    Pact.Analyze.Eval
                    Pact.Analyze.Eval.Invariant
                    Pact.Analyze.Eval.Numerical
                    Pact.Analyze.Eval.Prop
                    Pact.Analyze.Eval.Core
                    Pact.Analyze.Eval.Term
                    Pact.Analyze.Check
                    Pact.Analyze.Errors
                    Pact.Analyze.Feature
                    Pact.Analyze.LegacySFunArray
                    Pact.Analyze.Model
                    Pact.Analyze.Model.Dot
                    Pact.Analyze.Model.Graph
                    Pact.Analyze.Model.Tags
                    Pact.Analyze.Model.Text
                    Pact.Analyze.Parse
                    Pact.Analyze.Parse.Invariant
                    Pact.Analyze.Parse.Prop
                    Pact.Analyze.Parse.Types
                    Pact.Analyze.Patterns
                    Pact.Analyze.PrenexNormalize
                    Pact.Analyze.Translate
                    Pact.Analyze.Types
                    Pact.Analyze.Types.Capability
                    Pact.Analyze.Types.Eval
                    Pact.Analyze.Types.Languages
                    Pact.Analyze.Types.Model
                    Pact.Analyze.Types.Numerical
                    Pact.Analyze.Types.ObjUtil
                    Pact.Analyze.Types.Shared
                    Pact.Analyze.Types.Types
                    Pact.Analyze.Util
                    Pact.Analyze.Remote.Server
                    Pact.ApiReq
                    Pact.Bench
                    Pact.Docgen
                    Pact.Interpreter
                    Pact.Main
                    Pact.MockDb
                    Pact.Persist.MockPersist
                    Pact.Persist.SQLite
                    Pact.PersistPactDb.Regression
                    Pact.ReplTools
                    Pact.Server.ApiServer
                    Pact.Server.History.Persistence
                    Pact.Server.History.Service
                    Pact.Server.History.Types
                    Pact.Server.PactService
                    Pact.Server.Server
                    Pact.Server.Test
                    Pact.Types.Crypto
                    Pact.Types.ECDSA
                    Pact.Types.Server
                    Pact.Types.SQLite
                    Pact.GasModel.GasModel
                    Pact.GasModel.Types
                    Pact.GasModel.Utils
                    Pact.GasModel.GasTests

  build-depends:       Decimal >= 0.4.2 && < 0.6
                     , aeson >= 0.11.3.0 && < 1.5
                     , algebraic-graphs >= 0.2 && < 0.6
                     , prettyprinter >= 1.2 && < 1.4
                     , prettyprinter-ansi-terminal >= 1.1 && < 1.2
                     , attoparsec >= 0.13.0.2 && < 0.14
                     , base >=4.9.0.0 && < 4.14
                     , base16-bytestring >=0.1.1.6 && < 0.2
                     , base64-bytestring >= 1.0.0.1
                     , bound >= 2 && < 2.1
                     , bytestring >=0.10.8.1 && < 0.11
                     , cassava >= 0.5
                     , cereal >=0.5.4.0 && < 0.6
                     , containers >= 0.5.7 && < 0.7
                     , data-default >= 0.7.1.1 && < 0.8
                     , deepseq >= 1.4.2.0 && < 1.5
                     , deriving-compat >= 0.5.1
                     , directory >= 1.2.6.2 && < 1.4
                     , errors >= 2.3
                     , exceptions >= 0.8.3 && < 0.11
                     , filepath >= 1.4.1.0 && < 1.5
                     , hashable >= 1.2.4.0 && < 1.4
                     , hspec >= 2.2.4 && < 2.8
                     , lens >= 4.14 && < 4.19
                     , lens-aeson >= 1.0.0.5 && < 1.2
                     , megaparsec >= 7
                     , mtl >= 2.2.1 && < 2.3
                     , old-locale >= 1.0.0.7 && < 1.1
                     , optparse-applicative >= 0.12.1.0 && < 0.16
                     , parsers >= 0.12.4 && < 0.13
                     , reflection
                     , safe >= 0.3.11 && < 0.4
                     , scientific >= 0.3.4.9 && < 0.4
                     , semigroups >= 0.18.2 && < 0.20
                     , semigroupoids >= 5.0
                     , stm >= 2.4.4.1 && < 2.6
                     , text >= 1.2.2.1 && < 1.3
                     -- kadena ghcjs compat fork
                     , thyme == 0.3.6.0
                     , transformers >= 0.5.2.0 && < 0.6
                     , trifecta >= 2.1
                     , unordered-containers >= 0.2.7.2 && < 0.3
                     , utf8-string >= 1.0.1.1 && < 1.1
                     , vector >= 0.11.0.0 && < 0.13
                     , vector-algorithms >= 0.7
                     , vector-space >= 0.10.4 && < 0.17
                     , mmorph >= 1.1 && < 1.2
                     , constraints
                     , servant
                     , servant-client
                     , servant-client-core
                     , servant-swagger
                     , swagger2 >= 2.3 && < 2.5

  if impl(ghcjs)
    build-depends:
                  ghcjs-base,
                  ghcjs-prim

  if !impl(ghcjs)
    build-depends:
                  async
                , criterion >= 1.1.4 && < 1.6
                , cryptonite
                , direct-sqlite
                , fast-logger
                , haskeline >= 0.7.3 && < 0.8
                , http-client
                , memory
                , neat-interpolation >= 0.5.0.1
                , safe-exceptions >= 0.1.5.0 && < 0.2
                , sbv >= 7.11 && < 8.3
                , servant-server
                , statistics >= 0.13.3 && < 0.16
                , wai-cors
                , warp
                , yaml

  if !impl(ghcjs) && !os(windows)
    build-depends: unix

  if !impl(ghcjs) && !flag(cryptonite-ed25519)
    build-depends:
        crypto-api
      , ed25519-donna

  if !impl(ghcjs) && flag(cryptonite-ed25519)
    cpp-options: -DCRYPTONITE_ED25519

  hs-source-dirs:      src
  default-language:    Haskell2010
  if !impl(ghcjs)
    ghc-options:         -Wall -Werror -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls

executable pact
  main-is:             Repl.hs

  build-depends:       base
                     , pact
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

  if os(darwin)
    ghc-options: -optP-Wno-nonportable-include-path

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  build-depends:       base
                     , pact
  hs-source-dirs:      executables pact-lang-api.js
  ghc-options:         -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable gasmodel
  main-is:             GasModel.hs
  build-depends:       base
                     , pact
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

test-suite hspec
  if !impl(ghcjs)
    main-is:          hspec.hs
    type:             exitcode-stdio-1.0
  else
    main-is:          hspec-ghcjs.hs
    type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -O2 -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
                base
              , Decimal
              , HUnit
              , aeson
              , base16-bytestring >=0.1.1.6 && < 0.2
              , bound
              , bytestring
              , containers
              , data-default
              , deepseq
              , directory
              , errors >= 2.3
              , exceptions
              , filepath
              , hedgehog >= 1.0.1 && < 1.1
              , hspec
              , hspec-golden >= 0.1
              , hw-hspec-hedgehog == 0.1.*
              , intervals
              , lens
              , mmorph
              , mtl
              , pact
              , prettyprinter
              , prettyprinter-ansi-terminal
              , prettyprinter-convert-ansi-wl-pprint
              , text
              , transformers
              , unordered-containers
              , vector
  other-modules:
                Blake2Spec
                KeysetSpec
                TypesSpec
  if !impl(ghcjs)
    build-depends:
                  neat-interpolation >= 0.5.0.1
                , sbv
                , async
                , cryptonite
                , http-client
                , servant-client
    other-modules:
                  DocgenSpec
                , PactTestsSpec
                , ParserSpec
                , PersistSpec
                , RemoteVerifySpec
                , SignatureSpec
                , TypecheckSpec
                , PactContinuationSpec
                , AnalyzePropertiesSpec
                , AnalyzeSpec
                , Analyze.Eval
                , Analyze.Gen
                , Analyze.TimeGen
                , Analyze.Translate
                , ClientSpec
                , SchemeSpec
                , HistoryServiceSpec
                , GasModelSpec
                , GoldenSpec
