cabal-version:       2.2
name:                pact
version:             4.12
-- ^ 4 digit is prerelease, 3- or 2-digit for prod release
synopsis:            Smart contract language library and REPL
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact>.
homepage:            https://github.com/kadena-io/pact
bug-reports:         https://github.com/kadena-io/pact/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Stuart Popejoy
maintainer:          stuart@kadena.io
copyright:           Copyright (C) 2016 Stuart Popejoy
category:            Language
build-type:          Simple

extra-source-files:
    README.md
    CHANGELOG.md
    cbits/musl/libm.h
    cbits/musl/endian.h
    cbits/musl/exp_data.h
    cbits/musl/log_data.h
    cbits/musl/pow_data.h
    cbits/musl/sqrt_data.h

flag cryptonite-ed25519
  description: use crypton instead of ed25519-donna
  default:     True
  manual:      True

flag build-tool
  description: Include modules and deps for tests + executable
  default:     True
  manual:      True

flag tests-in-lib
  description: Include test src and deps in lib
  default:     False
  manual:      True

-- -------------------------------------------------------------------------- --
-- Internal: prettyprinter-1.6.0 and prettyprinter-ansi-terminal-1.1.2

library pact-prettyprinter
  hs-source-dirs: vendored/prettyprinter-1.6.0/src
  default-language: Haskell2010
  exposed-modules:
    Data.Text.Prettyprint.Doc
    Data.Text.Prettyprint.Doc.Internal
    Data.Text.Prettyprint.Doc.Render.String
    Data.Text.Prettyprint.Doc.Render.Terminal
    Data.Text.Prettyprint.Doc.Render.Text
    Data.Text.Prettyprint.Doc.Render.Util.Panic
    Data.Text.Prettyprint.Doc.Render.Util.StackMachine
    Data.Text.Prettyprint.Doc.Symbols.Ascii
    Data.Text.Prettyprint.Doc.Compat
  build-depends:
    , base >= 4.5 && < 5
    , text >= 1.2
    , ansi-terminal >=0.4
    , prettyprinter >= 1.7

-- -------------------------------------------------------------------------- --
-- Pact library

library
  cpp-options: -DLEGACY_PARSER
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-prof-options:
    -fprof-auto
    -fprof-auto-calls
  ghc-options:
    -Wall
    -Werror
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  c-sources:
    cbits/musl/__math_invalid.c
    cbits/musl/__math_divzero.c
    cbits/musl/__math_oflow.c
    cbits/musl/__math_uflow.c
    cbits/musl/__math_xflow.c
    cbits/musl/exp.c
    cbits/musl/exp_data.c
    cbits/musl/log.c
    cbits/musl/log_data.c
    cbits/musl/pow.c
    cbits/musl/pow_data.c
    cbits/musl/sqrt.c
    cbits/musl/sqrt_data.c
  exposed-modules:
    Crypto.Hash.Blake2Native
    Crypto.Hash.Keccak256Native
    Crypto.Hash.HyperlaneMessageId
    Crypto.Hash.PoseidonNative
    Pact.Analyze.Remote.Types
    Pact.ApiReq
    Pact.Compile
    Pact.Coverage
    Pact.Coverage.Report
    Pact.Eval
    Pact.Gas
    Pact.Gas.Table
    Pact.Gas.Table.Format
    Pact.Interpreter
    Pact.MockDb
    Pact.Native
    Pact.Native.Capabilities
    Pact.Native.Db
    Pact.Native.Decrypt
    Pact.Native.Guards
    Pact.Native.Internal
    Pact.Native.Keysets
    Pact.Native.Ops
    Pact.Native.Pairing
    Pact.Native.Pairing.GaloisField
    Pact.Native.SPV
    Pact.Native.Time
    Pact.Native.Trans.TOps
    Pact.Parse
    Pact.Persist
    Pact.Persist.MockPersist
    Pact.Persist.Pure
    Pact.Persist.SQLite
    Pact.PersistPactDb
    Pact.PersistPactDb.Regression
    Pact.Repl
    Pact.Repl.Lib
    Pact.Repl.Types
    Pact.Runtime.Capabilities
    Pact.Runtime.Typecheck
    Pact.Runtime.Utils
    Pact.Server.API
    Pact.Server.PactService
    Pact.Typechecker
    Pact.Types.API
    Pact.Types.Advice
    Pact.Types.Capability
    Pact.Types.ChainId
    Pact.Types.ChainMeta
    Pact.Types.Codec
    Pact.Types.Command
    Pact.Types.Continuation
    Pact.Types.Crypto
    Pact.Types.Exp
    Pact.Types.ExpParser
    Pact.Types.Gas
    Pact.Types.Hash
    Pact.Types.Info
    Pact.Types.KeySet
    Pact.Types.Lang
    Pact.Types.Logger
    Pact.Types.Names
    Pact.Types.Namespace
    Pact.Types.Native
    Pact.Types.Orphans
    Pact.Types.PactError
    Pact.Types.PactValue
    Pact.Types.PactValue.Arbitrary
    Pact.Types.Parser
    Pact.Types.Persistence
    Pact.Types.Pretty
    Pact.Types.Principal
    Pact.Types.Purity
    Pact.Types.RPC
    Pact.Types.RowData
    Pact.Types.Runtime
    Pact.Types.SPV
    Pact.Types.SQLite
    Pact.Types.Scheme
    Pact.Types.Server
    Pact.Types.SigData
    Pact.Types.SizeOf
    Pact.Types.Term
    Pact.Types.Term.Arbitrary
    Pact.Types.Term.Internal
    Pact.Types.Type
    Pact.Types.Typecheck
    Pact.Types.Util
    Pact.Types.Verifier
    Pact.Types.Version
    Pact.Utils.Servant

  other-modules:
    Pact.Crypto.WebAuthn.Cose.PublicKey
    Pact.Crypto.WebAuthn.Cose.PublicKeyWithSignAlg
    Pact.Crypto.WebAuthn.Cose.Registry
    Pact.Crypto.WebAuthn.Cose.SignAlg
    Pact.Crypto.WebAuthn.Cose.Verify

  build-depends:
    -- internal
    , pact-prettyprinter

    -- external
    , Decimal >=0.4.2
    , QuickCheck >=2.12.6.1
    , aeson >=2
    , attoparsec >=0.13.0.2
    , asn1-encoding >=0.9.6
    , asn1-types >=0.3.4
    , base >= 4.18.0.0
    , base16-bytestring >=0.1.1.6
    , base64-bytestring >=1.0.0.1
    , binary >=0.8.9.1
        -- base64-bytestring >=1.2.0.0 is less lenient then previous versions, which can cause pact failures (e.g. (env-hash "aa"))
    , bound >=2
    , bytestring >=0.10.8.1
    , cborg >= 0.2.9
    , cereal >=0.5.4.0
    , containers >=0.5.7
    , criterion >=1.1.4
    , crypton
    , data-default >=0.7.1.1
    , deepseq >=1.4.2.0
    , deriving-compat >=0.5.1
    , direct-sqlite >=2.3.27
    , directory >=1.2.6.2
    , errors >=2.3
    , ethereum >= 0.1
    , exceptions >=0.8.3
    , filepath >=1.4.1.0
    , groups
    , hashable >=1.4
    , hashes >= 0.2
    , lens >=4.14
    , megaparsec >=9
    , memory
    , mod >=0.1.2
    , mtl >=2.3
    , pact-json >=0.1
    , pact-time >=0.2
    , parsers >=0.12.4
    , poly >=0.5.0
    , primitive >=0.8
    , quickcheck-instances >=0.3
    , reflection
    , safe-exceptions
    , safe-exceptions >=0.1.5.0
    , scientific >= 0.3
    , semigroupoids >=5.0
    , semirings
    , serialise >= 0.2.6
    , servant
    , servant-client >=0.16
    , servant-client-core >=0.16
    , statistics >=0.13.3
    , text >=2
    , time
    , transformers >= 0.5.2.0 && < 0.7
    , trifecta >=2.1.1.1
    , unordered-containers >=0.2.19
    , utf8-string >=1.0.1.1
    , vector >=0.11.0.0
    , vector-algorithms >=0.7
    , vector-space >=0.10.4
    , wide-word >= 0.1
    , yaml

  if flag(build-tool)
    cpp-options: -DBUILD_TOOL
    hs-source-dirs: src-tool
    exposed-modules:
      Pact.Docgen
      Pact.Analyze
      Pact.Analyze.Alloc
      Pact.Analyze.Eval
      Pact.Analyze.Eval.Invariant
      Pact.Analyze.Eval.Numerical
      Pact.Analyze.Eval.Prop
      Pact.Analyze.Eval.Core
      Pact.Analyze.Eval.Term
      Pact.Analyze.Check
      Pact.Analyze.Errors
      Pact.Analyze.Feature
      Pact.Analyze.PactSFunArray
      Pact.Analyze.Model
      Pact.Analyze.Model.Dot
      Pact.Analyze.Model.Graph
      Pact.Analyze.Model.Tags
      Pact.Analyze.Model.Text
      Pact.Analyze.Parse
      Pact.Analyze.Parse.Invariant
      Pact.Analyze.Parse.Prop
      Pact.Analyze.Parse.Types
      Pact.Analyze.Patterns
      Pact.Analyze.PrenexNormalize
      Pact.Analyze.Translate
      Pact.Analyze.Types
      Pact.Analyze.Types.Capability
      Pact.Analyze.Types.Eval
      Pact.Analyze.Types.Languages
      Pact.Analyze.Types.Model
      Pact.Analyze.Types.Numerical
      Pact.Analyze.Types.ObjUtil
      Pact.Analyze.Types.Shared
      Pact.Analyze.Types.Types
      Pact.Analyze.Util
      Pact.Analyze.Remote.Server
      Pact.Bench
      Pact.Main
      Pact.ReplTools
      Pact.Server.ApiServer
      Pact.Server.History.Persistence
      Pact.Server.History.Service
      Pact.Server.History.Types
      Pact.Server.Server
      Pact.GasModel.GasModel
      Pact.GasModel.Types
      Pact.GasModel.Utils
      Pact.GasModel.GasTests
    build-depends:
      , algebraic-graphs >=0.2
      , async
      , cassava >=0.5
      , constraints
      , fast-logger
      , haskeline >=0.7.3
      , mmorph >=1.1
      , neat-interpolation >=0.4
      , optparse-applicative >=0.12.1.0
      , sbv >=9.0
      , semigroupoids >=5.0
      , servant-server
      , wai-cors
      , warp
    if !os(windows)
      build-depends: unix
  if flag(cryptonite-ed25519)
    cpp-options: -DCRYPTONITE_ED25519
  else
    build-depends:
      , crypto-api
      , ed25519-donna
  if flag(tests-in-lib)
    hs-source-dirs: tests
    build-depends:
      , hedgehog >=1.0.1
      , hspec
      , hspec-golden >=0.1.0.2
      , hw-hspec-hedgehog >=0.1
      , intervals

-- -------------------------------------------------------------------------- --
-- Executables and Benchmarks

executable pact
  if !flag(build-tool)
    buildable: False
  main-is:             Repl.hs
  build-depends:       base
                     , pact
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

  if os(darwin)
    ghc-options: -optP-Wno-nonportable-include-path

benchmark bench
  if !flag(build-tool)
    buildable: False
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  build-depends:       base
                     , pact
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N" -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable gasmodel
  if !flag(build-tool)
    buildable: False
  main-is:             GasModel.hs
  build-depends:       base
                     , pact
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable contracts-bench
  main-is:             ContractsBench.hs
  build-depends:       base
                     , pact
                     , text
                     , criterion
                     , containers
                     , lens
                     , neat-interpolation
                     , terminal-progress-bar
                     , direct-sqlite
                     , mtl
                     , unordered-containers
                     , pact-json
                     , aeson
                     , data-default
                     , deepseq
                     , Decimal
                     , directory
                     , filepath
  hs-source-dirs:      contract-benchmarks
  ghc-options:         -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

benchmark bench-json
  if !flag(build-tool)
    buildable: False
  type: exitcode-stdio-1.0
  main-is: PactJson.hs
  build-depends:
    , QuickCheck
    , aeson
    , base
    , bound
    , bytestring
    , criterion
    , pact
    , pact-json
  hs-source-dirs: bench
  ghc-options: -Wall -threaded -rtsopts "-with-rtsopts=-N" -O
  ghc-prof-options: -fprof-auto -fprof-auto-calls
  default-language: Haskell2010

-- -------------------------------------------------------------------------- --
-- Test Suite

test-suite hspec
  main-is:          PactTests.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  cpp-options: -DLEGACY_PARSER -DDELTA_BYTES=1
  build-tool-depends: pact:pact
  build-depends:
    , QuickCheck
    , aeson
    , attoparsec
    , base
    , base16-bytestring
    , base64-bytestring
    , bound
    , bytestring
    , containers
    , data-default
    , directory
    , errors
    , filepath
    , hspec
    , lens
    , mod
    , mtl
    , pact
    , pact-json >= 0.1
    , semirings
    , text
    , transformers
    , trifecta
    , unordered-containers
    , vector

  other-modules:
    Blake2Spec
    KeysetSpec
    PactTestsSpec
    ParserSpec
    PrincipalSpec
    RoundTripSpec
    SchemeSpec
    SignatureSpec
    SizeOfSpec
    Test.Pact.Native.Pairing
    Test.Pact.Parse
    Test.Pact.Utils.LegacyValue

  if flag(build-tool)
    cpp-options: -DBUILD_TOOL
    other-modules:
      AnalyzePropertiesSpec
      AnalyzeSpec
      Analyze.Eval
      Analyze.Gen
      Analyze.TimeGen
      Analyze.Translate
      ClientSpec
      CoverageSpec
      DocgenSpec
      GasModelSpec
      GoldenSpec
      HistoryServiceSpec
      HyperlaneSpec
      Keccak256Spec
      PactContinuationSpec
      PersistSpec
      PoseidonSpec
      RemoteVerifySpec
      TypecheckSpec
      PactCLISpec
      ZkSpec
      ReplSpec
      PairingSpec
      Utils

    build-depends:
      , Decimal
      , deepseq
      , directory
      , exceptions
      , hedgehog >=1.0.1
      , hspec-golden >=0.1.0.2
      , hspec-hedgehog
      , groups
      , http-client
      , hw-hspec-hedgehog >=0.1
      , intervals
      , mmorph
      , neat-interpolation
      , sbv
      , servant-client >=0.16
      , temporary >=1.3
      , yaml
      , process
      , posix-pty
