name:                pact-ghcjs
version:             2.3.8
synopsis:            Frontend to the Pact smart contract language library
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact>.
homepage:            https://github.com/kadena-io/pact
bug-reports:         https://github.com/kadena-io/pact/issues
license:             BSD3
license-file:        LICENSE
author:              Stuart Popejoy
maintainer:          stuart@kadena.io
copyright:           Copyright (C) 2016 Stuart Popejoy
category:            Language
build-type:          Simple
cabal-version:       >=1.22

executable pact
  main-is:             ReplGhcjs.hs
  cpp-options:  -DGHCJS_BROWSER

  build-depends:
      base
    , containers
    , mtl
    , pact
    , reflex
    , reflex-dom
    , text
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded -rtsopts
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010
